--- a/wiki/AutoIt.wiki
+++ b/wiki/AutoIt.wiki
@@ -7,4 +7,4 @@ Used to use this type of scripting but AutoHotKey seems to be more flexible for 
 
 = Details =
 
-Get more info [http://www.autoitscript.com/site/autoit/]here
+Get more info [http://www.autoitscript.com/site/autoit label]here
